Un peu de factorisaiton de code Ajout de la méthode drop_butin à Hitable Les loot sur le toit peuvent se perdre (implémenté) Les passagers touchés meurent (removed d'interieur) Les tirs en haut et en bas ont été ajouté